--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@ body {
 
     .banner {
         margin: 40px;
+        margin-top: 120px;
     }
 
     .button-container {
@@ -51,4 +52,23 @@ button {
     padding: 15px 40px;
     background-color: #ff0;
     border-radius: 20px;
+}
+
+@media (max-width:801px)  {
+    .App {
+        .banner {
+            margin: 20px 10px;
+
+            img {
+                width: 100%;
+            }
+        }
+
+        .topic-result {
+            p {
+                font-size: .5em;
+                text-align: center;
+            }
+        }
+    }
 }
