--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -54,7 +54,7 @@ button {
     border-radius: 20px;
 }
 
-@media only screen and (max-width:801px)  {
+@media (max-width:801px)  {
     .App {
         .banner {
             margin: 20px 10px;
