--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,8 +16,39 @@ body {
     }
 
     .button-container {
-        button {
+        display: flex;
+        .component {
             margin: 10px 0;
+            padding: 15px 40px;
+            background-color: #ff0;
+            border-radius: 20px;
+        }
+    }
+
+    .time-n-word-list {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        max-height: 150px;
+        border: 1px solid white;
+        border-radius: 10px;
+        padding: 1rem 1rem;
+
+        .word-list {
+            overflow-y: auto;
+            max-height: 150px;
+            text-align-last: center;
+            display: flex;
+            justify-self: center;
+            text-align: center;
+
+            ul {
+                padding-right: 30px;
+            }
+        }
+
+        .timer {
+            justify-self: center;
+            text-align: center;
         }
     }
 
@@ -72,3 +103,41 @@ button {
         }
     }
 }
+
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #ffe100 #DFE9EB;
+  }
+  
+  /* Chrome, Edge and Safari */
+  *::-webkit-scrollbar {
+    width: 10px;
+    width: 10px;
+  }
+  *::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #DFE9EB;
+  }
+  
+  *::-webkit-scrollbar-track:hover {
+    background-color: #B8C0C2;
+  }
+  
+  *::-webkit-scrollbar-track:active {
+    background-color: #B8C0C2;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #ffe100;
+  }
+  
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: #9eff7a;
+  }
+  
+  *::-webkit-scrollbar-thumb:active {
+    background-color: #ff0095;
+  }
+  
