--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,8 +16,9 @@ body {
     }
 
     .button-container {
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        
         .component {
             margin: 10px 0;
             padding: 15px 40px;
